--- a/lib/credentials/Credentials.hpp.template
+++ b/lib/credentials/Credentials.hpp.template
@@ -1,27 +1,27 @@
 #ifndef CREDENTIALS_H
 #define CREDENTIALS_H
-// creds for wifi and mqtt
-class Credentials
-{
+
+
+class Credentials {
 private:
-    const char *_wifi_ssid = "";
-    const char *_wifi_password = "";
-    const char *_broker_ip = "";
-    const int _broker_port = 1883;
-    const char *_broker_user = "";
+    const char *_wifi_ssid       = "";
+    const char *_wifi_password   = "";
+    const char *_broker_ip       = "";
+    const int   _broker_port     = 1883;
+    const char *_broker_user     = "";
     const char *_broker_password = "";
 
 public:
-    Credentials();
+    Credentials() = default;
 
-    static const char *getWifiSSID() { return _wifi_ssid; }
-    static const char *getWifiPassword() { return _wifi_password; }
-    static const char *getBrokerIP() { return _broker_ip; }
-    static int getBrokerPort() { return _broker_port; }
-    static const char *getBrokerUsername() { return _broker_user; }
-    static const char *getBrokerPassword() { return _broker_password; }
+    const char* getWifiSSID() const       { return _wifi_ssid; }
+    const char* getWifiPassword() const   { return _wifi_password; }
+    const char* getBrokerIP() const       { return _broker_ip; }
+    int         getBrokerPort() const     { return _broker_port; }
+    const char* getBrokerUsername() const { return _broker_user; }
+    const char* getBrokerPassword() const { return _broker_password; }
 
-    ~Credentials();
+    ~Credentials() = default;
 };
 
 #endif /* CREDENTIALS_H */
